# 2025-winter-clustering-project

./: .gitignore  create_account.js  readme.md  readme_en.md
ingress/: .env.example  README.md  package.json  server.js
node/: .env.example  PERF_NOTES.md  README.md  reset.sh
node/kvs/: CMakeLists.txt  README.md  kvs.cc  kvs.h  main.cc
node/kvs/scripts/: build_ldb.sh  ldb.sh
node/server/backend/: README.md  package-lock.json  package.json  server.js
node/server/backend/data/: users.json
node/server/backend/module/: auth.js  env.js  http.js  kvs.js  posts.js  users.js  websocket.js
node/server/frontend/: README.md  index.html  main.html  new.html  post.html  register.html
node/server/frontend/assets/: README.md  api.js  app.css  login.js  main.js  new.js  post.js  register.js  ws.js
result/: full_experiment_records.csv  graph.py  readme.md
result/final_result/: graph.py  single_node_result.csv  three_node_result.csv
stress_test/: .env.example  README.md  cluster_experiment.sh  http_stress.js  load_env.js  max_users_1hz.js  single_experiment.sh
